# risk-scoring-system

./: .gitignore  Dockerfile  README.md  pyproject.toml
artifacts/: baseline_stats.json  eval_metrics.json  label_encoder.joblib  metrics.json  model.joblib  monitor_report.json  preprocessor.joblib  schema.json
configs/: base.yaml  model.yaml  monitor.yaml  policy.yaml  test_base.yaml
data/raw/: risk1.csv
src/: cli.py
src/decision_tree/: __init__.py  criteria.py  decision_tree.py  node.py  random_forest.py  split.py
src/risk_scoring_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/risk_system/: api.py  artifacts.py  cli.py  config.py  data.py  evaluate.py  exceptions.py  monitor.py  preprocess.py  service.py  train.py  utils.py
test/: test_cli_smoke.py  test_data.py  test_model_smoke.py  test_monitor.py  test_preprocess.py  test_threshold_search.py
